# tricycle

./: .gitignore  README.md
demo/: CMakeLists.txt
demo/src/: client_demo.cpp  demo_service.cpp  demo_service.hpp  main.cpp
tricycle/: CMakeLists.txt  FindThrift.cmake  proxy_service.thrift
tricycle/include/: generic_service.h  generic_service_constants.h  generic_service_types.h  proxy_service.h  proxy_service_constants.h  proxy_service_types.h  tricycle.hpp  tricycle_client.hpp  tricycle_server.hpp
tricycle/src/: generic_service.cpp  generic_service_constants.cpp  generic_service_types.cpp  proxy_service.cpp  proxy_service_constants.cpp  proxy_service_types.cpp  tricycle.cpp  tricycle_client.cpp  tricycle_server.cpp
